--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/common.css">
+<link rel="stylesheet" href="/portfolio/css/reset.css">
+<link rel="stylesheet" href="/portfolio/css/common.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-<script src="/js/jquery-1.12.1.min.js"></script>
-<script src="/js/jquery.easing.1.3.js"></script>
-<script src="/js/jquery.inview.js"></script>
-<script src="/js/common.js"></script>
+<script src="/portfolio/portfolio/js/jquery-1.12.1.min.js"></script>
+<script src="/portfolio/portfolio/js/jquery.easing.1.3.js"></script>
+<script src="/portfolio/portfolio/js/jquery.inview.js"></script>
+<script src="/portfolio/portfolio/js/common.js"></script>
 
 </head>
 <body>
@@ -127,58 +127,58 @@
 		<div class="inner boxfade-init">
 			<a href="/works/archives01/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_mhd_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_mhd_logo.png">
-				  <img src="/img/pc_mhd_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_mhd_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_mhd_logo.png">
+				  <img src="/portfolio/img/pc_mhd_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives02/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_fivestar_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_fivestar_logo.png">
-				  <img src="/img/pc_fivestar_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_fivestar_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_fivestar_logo.png">
+				  <img src="/portfolio/img/pc_fivestar_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives03/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_tokyometro_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_tokyometro_logo.png">
-				  <img src="/img/pc_tokyometro_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_tokyometro_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_tokyometro_logo.png">
+				  <img src="/portfolio/img/pc_tokyometro_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives01/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_zushifes_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_zushifes_logo.png">
-				  <img src="/img/pc_zushifes_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_zushifes_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_zushifes_logo.png">
+				  <img src="/portfolio/img/pc_zushifes_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives01/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_gazooraicng_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_gazooraicng_logo.png">
-				  <img src="/img/pc_gazooraicng_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_gazooraicng_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_gazooraicng_logo.png">
+				  <img src="/portfolio/img/pc_gazooraicng_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives01/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_lenovo_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_lenovo_logo.png">
-				  <img src="/img/pc_lenovo_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_lenovo_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_lenovo_logo.png">
+				  <img src="/portfolio/img/pc_lenovo_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives01/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_macromill_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_macromill_logo.png">
-				  <img src="/img/pc_macromill_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_macromill_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_macromill_logo.png">
+				  <img src="/portfolio/img/pc_macromill_logo.png">
 				</picture>
 			</a>
 			<a href="/works/archives01/" class="item">
 				<picture>
-				  <source media="(min-width: 768px)" srcset="/img/pc_jdsound_logo.png">
-				  <source media="(min-width: 321px)" srcset="/img/sp_jdsound_logo.png">
-				  <img src="/img/pc_jdsound_logo.png">
+				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_jdsound_logo.png">
+				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_jdsound_logo.png">
+				  <img src="/portfolio/img/pc_jdsound_logo.png">
 				</picture>
 			</a>
 
