--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <link rel="stylesheet" href="/portfolio/css/common.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-<script src="/portfolio/portfolio/js/jquery-1.12.1.min.js"></script>
-<script src="/portfolio/portfolio/js/jquery.easing.1.3.js"></script>
-<script src="/portfolio/portfolio/js/jquery.inview.js"></script>
-<script src="/portfolio/portfolio/js/common.js"></script>
+<script src="/portfolio/js/jquery-1.12.1.min.js"></script>
+<script src="/portfolio/js/jquery.easing.1.3.js"></script>
+<script src="/portfolio/js/jquery.inview.js"></script>
+<script src="/portfolio/js/common.js"></script>
 
 </head>
 <body>
