リンク変更

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<div id="header">
-		<a href="/"><h1>
+		<a href="/portfolio/"><h1>
 			<svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 				 y="0px" viewBox="0 0 850 120" style="enable-background:new 0 0 850 120;" xml:space="preserve">
 			<g>
@@ -125,56 +125,56 @@
 		<span class="border_line borderani-init"></span>
 		<h2 class="Montserrat upfade-init">MY WORKS</h2>
 		<div class="inner boxfade-init">
-			<a href="/works/archives01/" class="item">
+			<a href="/portfolio/works/archives01/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_mhd_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_mhd_logo.png">
 				  <img src="/portfolio/img/pc_mhd_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives02/" class="item">
+			<a href="/portfolio/works/archives02/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_fivestar_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_fivestar_logo.png">
 				  <img src="/portfolio/img/pc_fivestar_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives03/" class="item">
+			<a href="/portfolio/works/archives03/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_tokyometro_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_tokyometro_logo.png">
 				  <img src="/portfolio/img/pc_tokyometro_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives01/" class="item">
+			<a href="/portfolio/works/archives01/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_zushifes_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_zushifes_logo.png">
 				  <img src="/portfolio/img/pc_zushifes_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives01/" class="item">
+			<a href="/portfolio/works/archives01/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_gazooraicng_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_gazooraicng_logo.png">
 				  <img src="/portfolio/img/pc_gazooraicng_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives01/" class="item">
+			<a href="/portfolio/works/archives01/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_lenovo_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_lenovo_logo.png">
 				  <img src="/portfolio/img/pc_lenovo_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives01/" class="item">
+			<a href="/portfolio/works/archives01/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_macromill_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_macromill_logo.png">
 				  <img src="/portfolio/img/pc_macromill_logo.png">
 				</picture>
 			</a>
-			<a href="/works/archives01/" class="item">
+			<a href="/portfolio/works/archives01/" class="item">
 				<picture>
 				  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_jdsound_logo.png">
 				  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_jdsound_logo.png">
