--- a/works/archives01/index.html
+++ b/works/archives01/index.html
@@ -7,14 +7,15 @@
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<link rel="stylesheet" href="/css/reset.css">
-<link rel="stylesheet" href="/css/common.css">
+<link rel="stylesheet" href="/portfolio/css/reset.css">
+<link rel="stylesheet" href="/portfolio/css/common.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-<script src="/js/jquery-1.12.1.min.js"></script>
-<script src="/js/jquery.easing.1.3.js"></script>
-<script src="/js/jquery.inview.js"></script>
-<script src="/js/common.js"></script>
+<script src="/portfolio/js/jquery-1.12.1.min.js"></script>
+<script src="/portfolio/js/jquery.easing.1.3.js"></script>
+<script src="/portfolio/js/jquery.inview.js"></script>
+<script src="/portfolio/js/common.js"></script>
+
 </head>
 <body>
 	<div id="loading_overray">
@@ -30,7 +31,7 @@
 		</div>
 	</div>
 	<div id="header_in">
-		<a href="/">
+		<a href="/portfolil/">
 			<h1>
 				<svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 					 y="0px" viewBox="0 0 850 120" style="enable-background:new 0 0 850 120;" xml:space="preserve">
@@ -126,20 +127,20 @@
 		<span class="border_line borderani-init"></span>
 		<div class="works_logo">
 			<picture class="upfade-init">
-				<source media="(min-width: 768px)" srcset="/img/pc_mhd_logo.png">
-				<source media="(min-width: 321px)" srcset="/img/sp_mhd_logo.png">
-				<img src="/img/pc_mhd_logo.png">
+				<source media="(min-width: 768px)" srcset="/portfolio/img/pc_mhd_logo.png">
+				<source media="(min-width: 321px)" srcset="/portfolio/img/sp_mhd_logo.png">
+				<img src="/portfolio/img/pc_mhd_logo.png">
 			</picture>
 		</div>
 		<div class="works_view">
 			<div class="device_section">
-					<img class="display displayfade-init" src="/works/archives01/display.png" alt="">
+					<img class="display displayfade-init" src="/portfolio/works/archives01/display.png" alt="">
 					<picture>
-						<source media="(min-width: 768px)" srcset="/works/archives01/iphone.png">
-						<source media="(max-width: 767px)" srcset="/works/archives01/sp_iphone.png">
-						<img class="iphone iphonefade-init" src="/works/archives01/iphone.png" alt="">
+						<source media="(min-width: 768px)" srcset="/portfolio/works/archives01/iphone.png">
+						<source media="(max-width: 767px)" srcset="/portfolio/works/archives01/sp_iphone.png">
+						<img class="iphone iphonefade-init" src="/portfolio/works/archives01/iphone.png" alt="">
 					</picture>
-					<img class="macbook macbookfade-init" src="/works/archives01/macbook.png" alt="">
+					<img class="macbook macbookfade-init" src="/portfolio/works/archives01/macbook.png" alt="">
 			</div>
 
 			<div class="works_desc">
@@ -156,21 +157,21 @@
 			<div class="screen">
 				<div class="in_wrap flex_layout">
 					<div class="item L-oblique-init">
-						<img src="/works/archives01/screen01.jpg">
+						<img src="/portfolio/works/archives01/screen01.jpg">
 					</div>
 					<div class="item R-oblique-init">
-						<img src="/works/archives01/screen02.jpg">
+						<img src="/portfolio/works/archives01/screen02.jpg">
 					</div>
 					<div class="item L-oblique-init">
-						<img src="/works/archives01/screen03.jpg">
+						<img src="/portfolio/works/archives01/screen03.jpg">
 					</div>
 					<div class="item R-oblique-init">
-						<img src="/works/archives01/screen04.jpg">
+						<img src="/portfolio/works/archives01/screen04.jpg">
 					</div>
 				</div>
 			</div>
 
-			<a href="/" class="Montserrat link_btn fade-init"><span class="arrow">BACK TO LIST</span></a>
+			<a href="/portfolio/" class="Montserrat link_btn fade-init"><span class="arrow">BACK TO LIST</span></a>
 		</div>
 	</div>
 
