--- a/works/archives03/index.html
+++ b/works/archives03/index.html
@@ -7,14 +7,14 @@
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-<link rel="stylesheet" href="/css/reset.css">
-<link rel="stylesheet" href="/css/common.css">
-<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+<link rel="stylesheet" href="/portfolio/css/reset.css">
+<link rel="stylesheet" href="/portfolio/css/common.css">
+<link href="/portfoliohttps://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
-<script src="/js/jquery-1.12.1.min.js"></script>
-<script src="/js/jquery.easing.1.3.js"></script>
-<script src="/js/jquery.inview.js"></script>
-<script src="/js/common.js"></script>
+<script src="/portfolio/js/jquery-1.12.1.min.js"></script>
+<script src="/portfolio/js/jquery.easing.1.3.js"></script>
+<script src="/portfolio/js/jquery.inview.js"></script>
+<script src="/portfolio/js/common.js"></script>
 </head>
 <body>
 	<div id="loading_overray">
@@ -30,7 +30,7 @@
 		</div>
 	</div>
 	<div id="header_in">
-		<a href="/">
+		<a href="/portfolio/">
 			<h1>
 				<svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 					 y="0px" viewBox="0 0 850 120" style="enable-background:new 0 0 850 120;" xml:space="preserve">
@@ -126,20 +126,20 @@
 		<span class="border_line borderani-init"></span>
 		<div class="works_logo">
 			<picture class="upfade-init">
-				<source media="(min-width: 768px)" srcset="/img/pc_tokyometro_logo.png">
-				<source media="(min-width: 321px)" srcset="/img/sp_tokyometro_logo.png">
-				<img src="/img/pc_fivestar_logo.png">
+				<source media="(min-width: 768px)" srcset="/portfolio/img/pc_tokyometro_logo.png">
+				<source media="(min-width: 321px)" srcset="/portfolio/img/sp_tokyometro_logo.png">
+				<img src="/portfolio/img/pc_fivestar_logo.png">
 			</picture>
 		</div>
 		<div class="works_view">
 			<div class="device_section">
-					<img class="display displayfade-init" src="/works/archives03/display.png" alt="">
+					<img class="display displayfade-init" src="/portfolio/works/archives03/display.png" alt="">
 					<picture>
-						<source media="(min-width: 768px)" srcset="/works/archives03/iphone.png">
-						<source media="(max-width: 767px)" srcset="/works/archives03/sp_iphone.png">
-						<img class="iphone iphonefade-init" src="/works/archives03/iphone.png" alt="">
+						<source media="(min-width: 768px)" srcset="/portfolio/works/archives03/iphone.png">
+						<source media="(max-width: 767px)" srcset="/portfolio/works/archives03/sp_iphone.png">
+						<img class="iphone iphonefade-init" src="/portfolio/works/archives03/iphone.png" alt="">
 					</picture>
-					<img class="macbook macbookfade-init" src="/works/archives03/macbook.png" alt="">
+					<img class="macbook macbookfade-init" src="/portfolio/works/archives03/macbook.png" alt="">
 			</div>
 
 			<div class="works_desc">
@@ -150,33 +150,33 @@
 						<p>Art direction</p>
 						<p>DesignTechnical Direction / Development</p>
 					</div>
-					<a href="https://www.5star.co.jp/" target="_blank" class="Montserrat link_btn viewsite_btn"><span>VIEW WEBSITE</span></a>
+					<a href="/portfoliohttps://www.5star.co.jp/" target="_blank" class="Montserrat link_btn viewsite_btn"><span>VIEW WEBSITE</span></a>
 				</div>
 			</div>
 			<div class="screen">
 				<div class="in_wrap flex_layout">
 					<div class="item L-oblique-init">
-						<img src="/works/archives03/screen01.jpg">
+						<img src="/portfolio/works/archives03/screen01.jpg">
 					</div>
 					<div class="item R-oblique-init">
-						<img src="/works/archives03/screen02.jpg">
+						<img src="/portfolio/works/archives03/screen02.jpg">
 					</div>
 					<div class="item col1 upfade-init">
-						<img src="/works/archives03/screen05.jpg">
+						<img src="/portfolio/works/archives03/screen05.jpg">
 					</div>
 					<div class="item col1 upfade-init">
-						<img src="/works/archives03/screen06.jpg">
+						<img src="/portfolio/works/archives03/screen06.jpg">
 					</div>
 					<div class="item col1 upfade-init">
-						<img src="/works/archives03/screen03.jpg">
+						<img src="/portfolio/works/archives03/screen03.jpg">
 					</div>
 					<div class="item col1 upfade-init">
-						<img src="/works/archives03/screen04.jpg">
+						<img src="/portfolio/works/archives03/screen04.jpg">
 					</div>
 				</div>
 			</div>
 
-			<a href="/" class="Montserrat link_btn fade-init"><span class="arrow">BACK TO LIST</span></a>
+			<a href="/portfolio/" class="Montserrat link_btn fade-init"><span class="arrow">BACK TO LIST</span></a>
 		</div>
 	</div>
 
