リンクミス

--- a/works/archives01/index.html
+++ b/works/archives01/index.html
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	<div id="header_in">
-		<a href="/portfolil/">
+		<a href="/portfolio/">
 			<h1>
 				<svg version="1.1" id="レイヤー_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px"
 					 y="0px" viewBox="0 0 850 120" style="enable-background:new 0 0 850 120;" xml:space="preserve">
