--- a/works/archives06/index.html
+++ b/works/archives06/index.html
@@ -144,12 +144,13 @@
 
 			<div class="works_desc">
 				<div class="in_wrap fade-init">
-					<h2>TOYOTA GAZOO RACING<br>スーパー耐久最多勝男！木下隆之のクルマまるわかり</h2>
+					<h2>LENOVO HOUSE at Quick Silver</h2>
 					<div class="note">
-						<p>Client：TOYOTA GAZOO RACING</p>
+						<p>Client：LENOVO</p>
 						<p>Art direction</p>
+						<p>DesignTechnical Direction / Development</p>
 					</div>
-					<a href="http://toyotagazooracing.com/jp/supertaikyu/special/attraction/" target="_blank" class="Montserrat link_btn viewsite_btn"><span>VIEW WEBSITE</span></a>
+					<a href="http://beach.lenovo-active.com/2015/" target="_blank" class="Montserrat link_btn viewsite_btn"><span>VIEW WEBSITE</span></a>
 				</div>
 			</div>
 			<div class="screen">
