--- a/works/archives06/index.html
+++ b/works/archives06/index.html
@@ -144,9 +144,9 @@
 
 			<div class="works_desc">
 				<div class="in_wrap fade-init">
-					<h2>LENOVO HOUSE at Quick Silver</h2>
+					<h2>Lenovo HOUSE at Quick Silver</h2>
 					<div class="note">
-						<p>Client：LENOVO</p>
+						<p>Client：Lenovo</p>
 						<p>Art direction</p>
 						<p>DesignTechnical Direction / Development</p>
 					</div>
