brillia一旦削除 , DMIのdemo一旦削除

--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
 					  <img src="/portfolio/img/pc_dance_logo.png">
 					</picture>
 				</a>
-				<a href="/portfolio/works/archives13/" class="item">
+				<!-- <a href="/portfolio/works/archives13/" class="item">
 					<picture>
 					  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_brillia_logo.png">
 					  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_brillia_logo.png">
 					  <img src="/portfolio/img/pc_brillia_logo.png">
 					</picture>
-				</a>
+				</a> -->
 			</div>
 			<h3 class="Montserrat upfade-init category-ttl">LP DESIGN</h3>
 			<div class="inner boxfade-init">
