--- a/works/archives07/index.html
+++ b/works/archives07/index.html
@@ -143,7 +143,7 @@
 						<p>Client：電通マクロミルインサイト</p>
 						<p>スクリーンデザイン / Flashオーサリング</p>
 					</div>
-					<a href="/portfolio/works/archives07/DMI_ScreenSaver_2015.html" target="_blank" class="Montserrat link_btn viewsite_btn"><span>VIEW DEMO</span></a>
+					<!-- <a href="/portfolio/works/archives07/DMI_ScreenSaver_2015.html" target="_blank" class="Montserrat link_btn viewsite_btn"><span>VIEW DEMO</span></a> -->
 				</div>
 			</div>
 			<div class="screen">
