--- a/v2/index.html
+++ b/v2/index.html
@@ -6,7 +6,7 @@
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-<!-- <link rel="stylesheet" href="assets/css/style.css"> -->
+<link rel="stylesheet" href="assets/css/style.css">
 <!-- <script type="text/javascript" src="assets/js/jquery.min.js"></script>
 <script type="text/javascript" src="assets/js/velocity.js"></script>
 <script type="text/javascript" src="assets/js/common.js"></script>
