--- a/v2/dest/index.html
+++ b/v2/dest/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title></title>
+<title>SHIMIZU YUTA PORTFOLIO</title>
 <meta name="description" content="">
 <meta name="keywords" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -13,7 +13,6 @@
 <script type="text/javascript" src="assets/js/velocity.js"></script>
 <script type="text/javascript" src="assets/js/masonry.pkgd.min.js"></script>
 <script type="text/javascript" src="assets/js/imagesloaded.js"></script>
-<script type="text/javascript" src="assets/js/iscroll.js"></script>
 <script type="text/javascript" src="assets/js/common.js"></script>
 
 </head>
@@ -23,7 +22,6 @@
         <!-- <span class="dark">Dark</span> -->
     </button>
   <div id="main">
-    
     <ul>
     </ul>
     <button class="aboutme Montserrat">ABOUT ME</button>
