--- a/v2/dest/works/archives1/index.html
+++ b/v2/dest/works/archives1/index.html
@@ -19,6 +19,18 @@
 
 </head>
 <body>
+    <div id="loading_overray">
+        <div class="bg"></div>
+        <div id="load" class="Montserrat">
+            <div>G</div>
+            <div>N</div>
+            <div>I</div>
+            <div>D</div>
+            <div>A</div>
+            <div>O</div>
+            <div>L</div>
+        </div>
+    </div>
   <div id="works_main" class="is-active">
     <div class="in-wrap">
         <header>
