--- a/v2/dest/index.html
+++ b/v2/dest/index.html
@@ -15,10 +15,11 @@
 <script type="text/javascript" src="assets/js/imagesloaded.js"></script>
 <script type="text/javascript" src="assets/js/jquery.inview.js"></script>
 <script type="text/javascript" src="assets/js/common.js"></script>
+<script type="text/javascript" src="assets/js/lodash.min.js"></script>
+<!-- <script type="text/javascript" src="assets/js/particle.js"></script> -->
 
 </head>
 <body>
-
     <div id="loading_overray">
         <div class="bg"></div>
         <div id="load" class="Montserrat">
@@ -32,7 +33,6 @@
         </div>
     </div>
       
-    
   <div id="main">
     <button class="toggleSwitch Montserrat">
         <span class="handle"></span>
@@ -45,7 +45,7 @@
       <button class="closeBtn"><span class="line01"></span><span class="line02"></span><span class="line03"></span><span class="line04"></span></button>
       <div class="in-wrap">
         <h2 class="Montserrat">I’m into web designing.</h2>
-        <p>何かをデザインするときに求められるのは<br>
+        <!-- <p>何かをデザインするときに求められるのは<br>
             「フォーカス」</p>
 <p>自分に問うことは<br>
     人がそこから何を感じるか</p>
@@ -59,9 +59,29 @@
 <p>答えのない輪郭を描くように</p>
 
 <p>手がけるすべてのものが<br>
-    その人を輝かせるまで</p>
+    その人を輝かせるまで</p> -->
+    <p>web業界の職務経歴は現在9年目となりまして、主な業務として、デザイン制作HTML/CSS/JS実装、などをしております。webデザイナーとして心がけている事は、デザインの緩急を意識して制作しております。まずどの情報が優先度が高いのかを決め、1.「ユーザーに対しての印象付け」2.「メッセージ・訴求ポイントの見せ方」3.「サイト全体の見やすさ・使いやすさ」を考えながら制作をしております。デザイン業務以外では、FlashやJavascriptでの実装などの案件も携わり、比較的簡単なスクリプトであれば実装しておりました。<br>プログラミングの世界もまたデザインと通じており、情報設計が大切だと思っております。</p>
       </div>      
     </div>
   </div>
+  
+  <div class="bgVectorWrap">
+      <div class="bgVector box01"></div>
+      <div class="bgVector box02"></div>
+      <div class="bgVector box03"></div>
+      <div class="bgVector box04"></div>
+      <div class="bgVector box05"></div>
+  </div>
+
+  <!-- <div class="blurCircle"></div> -->
+  <!-- <div class="ui">
+    <p class="zoom"><span class="zoom zoomin">+</span><span class="zoom zoomout">-</span></p>
+    <p class="zoomlevel"><span class="percent">100</span> % - (<span class="width"></span>px)(<span class="height"></span>px)</p>
+    <p>Dead: <span class="dead">0</span></p>
+    <p>Alive: <span class="alive">0</span></p>
+    <p>Drawn: <span class="drawn">0</span></p>
+    <p><span class="fps">0</span> FPS</p>
+    <a class="save" href="" download="capture.png">Save</a>
+    </div> -->
 </body>
 </html>
