--- a/v2/dest/works/archives1/index.html
+++ b/v2/dest/works/archives1/index.html
@@ -50,17 +50,30 @@
         <section class="slider">
             <div class="brandLogo"><img src="../../assets/images/sp_mhd_logo.png" alt=""></div>
             <ul class="slick_slider">
-                <li><span><img src="coverImg.png" alt=""></span</li>
-                <li><span><img src="coverImg.png" alt=""></span</li>
+                <li><span><img src="device-display.png" alt=""></span</li>
+                <li><span><img src="device-display.png" alt=""></span</li>
             </ul>
         </section>
-        <section class="introduction">
-            <h2 class="Montserrat">STORY OF MHD</h2>
-            <p>MHD モエ ヘネシー ディアジオは、ラグジュアリー市場をリードする<br>
-            LVMH モエ ヘネシー・ルイ ヴィトン グループのワインズ&スピリッツ事業を担うモエ ヘネシーと、スピリッツを中心に多数の洋酒ブランドを持つディアジオとの合弁会社です。<br>
-            歴史と伝統のあるシャンパン・ワイン・スピリッツのラグジュアリーブランドを多数保有し、世界を代表する優れたポートフォリオを駆使して、高級洋酒マーケットをリードし続けている洋酒輸入販売会社です。<br>
-            </p>
-        </section>
+
+        <div class="gridContainer">
+            <section class="introduction">
+                <h2 class="Montserrat">STORY OF MHD</h2>
+                <p>MHD モエ ヘネシー ディアジオは、ラグジュアリー市場をリードする<br>
+                LVMH モエ ヘネシー・ルイ ヴィトン グループのワインズ&スピリッツ事業を担うモエ ヘネシーと、スピリッツを中心に多数の洋酒ブランドを持つディアジオとの合弁会社です。<br>
+                歴史と伝統のあるシャンパン・ワイン・スピリッツのラグジュアリーブランドを多数保有し、世界を代表する優れたポートフォリオを駆使して、高級洋酒マーケットをリードし続けている洋酒輸入販売会社です。<br>
+                </p>
+            </section>
+            <section class="mobile">
+                <img src="iphone.png" alt="">
+            </section>
+    
+            <section class="screen">
+                <img src="screen02.png" alt="">
+            </section>
+            <div>
+                
+            </div>
+        </div>
     </div>    
   </div>
 </body>
