works spレスポンシブ対応ここから

--- a/v2/dest/index.html
+++ b/v2/dest/index.html
@@ -60,7 +60,7 @@
 
 <p>手がけるすべてのものが<br>
     その人を輝かせるまで</p> -->
-    <p>webデザイナーとして心がけている事は、デザインの緩急を意識して制作しております。まずどの情報が優先度が高いのかを決め、1.「ユーザーに対しての印象付け」2.「メッセージ・訴求ポイントの見せ方」3.「サイト全体の見やすさ・使いやすさ」を考えながら制作をしております。デザイン業務以外では、FlashやJavascriptでの実装などの案件も携わり、比較的簡単なスクリプトであれば実装しておりました。<br>プログラミングの世界もまたデザインと通じており、情報設計が大切だと思っております。</p>
+    <p>webデザイナーとして心がけている事は、デザインの緩急を意識して制作しております。まずどの情報が優先度が高いのかを決め、1.「ユーザーに対しての印象付け」2.「メッセージ・訴求ポイントの見せ方」3.「サイト全体の見やすさ・使いやすさ」を考えながら制作をしております。デザイン業務以外では、FlashやjQueryも携わり、比較的簡単なスクリプトであれば実装しておりました。<br>プログラミングの世界もまたデザインと通じており、情報設計が大切だと思っております。</p>
       </div>      
     </div>
   </div>
