--- a/v2/dest/works/archives1/index.html
+++ b/v2/dest/works/archives1/index.html
@@ -41,7 +41,7 @@
                     Client：MHD モエ ヘネシー ディアジオ<br>
                     アートディレクション / WEBデザイン / コーディング
                 </p>
-                <a class="btnDetail Montserrat" href="https://www.mhdkk.com/" target="_blank">VIEW WEBSITE</a>
+                <a class="btnDetail Montserrat" href="https://www.mhdkk.com/" target="_blank"><span>VIEW WEBSITE</span></a>
             </div>
         </header>
         <section class="coverImg">
@@ -70,9 +70,9 @@
             <section class="screen">
                 <img src="screen02.png" alt="">
             </section>
-            <div>
-                
-            </div>
+        </div>
+        <div id="backTonavi" class="Montserrat"> 
+            <a href="../../"><span>BACK TO LIST</span></a>            
         </div>
     </div>    
   </div>
