レスポンシブ対応

--- a/v2/dest/index.html
+++ b/v2/dest/index.html
@@ -38,9 +38,9 @@
         <span class="handle"></span>
         <span class="labeltxt Montserrat"></span>
     </button>
-    <ul class="inview-itemFade">
+    <ul>
     </ul>
-    <button class="aboutme Montserrat">ABOUT ME</button>
+    <button class="aboutmeBtn Montserrat">ABOUT ME</button>
     <div id="aboutme_modal">
       <button class="closeBtn"><span class="line01"></span><span class="line02"></span><span class="line03"></span><span class="line04"></span></button>
       <div class="in-wrap">
