--- a/v2/dest/works/archives1/index.html
+++ b/v2/dest/works/archives1/index.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="../../assets/js/common.js"></script>
 <script type="text/javascript" src="../../assets/js/slick.js"></script>
 <script type="text/javascript" src="../../assets/js/slickslider.js"></script>
+<script type="text/javascript" src="../../assets/js/jquery.inview.js"></script>
 
 </head>
 <body>
@@ -34,7 +35,7 @@
   <div id="works_main" class="is-active">
     <div class="in-wrap">
         <header>
-            <a class="logo" href="../../"><img src="../../assets/images/logo.svg" alt=""></a>
+            <a class="logo" href="../../"></a>
             <div class="summary">
                 <h1 class="Montserrat">MHD Moët Hennessy Diageo K.K.</h1>
                 <p class="read">
@@ -45,13 +46,15 @@
             </div>
         </header>
         <section class="coverImg">
-            <img src="coverImg.png" alt="">
+            <img src="coverImg.jpg" alt="">
         </section>
         <section class="slider">
             <div class="brandLogo"><img src="../../assets/images/sp_mhd_logo.png" alt=""></div>
             <ul class="slick_slider">
                 <li><span><img src="device-display.png" alt=""></span</li>
                 <li><span><img src="device-display.png" alt=""></span</li>
+                <li><span><img src="device-display.png" alt=""></span</li>
+                <!-- <li><span><img src="slider02.png" alt=""></span</li> -->
             </ul>
         </section>
 
