--- a/v2/dest/works/archives1/index.html
+++ b/v2/dest/works/archives1/index.html
@@ -34,7 +34,7 @@
     </div>
   <div id="works_main" class="is-active">
     <div class="in-wrap">
-        <header>
+        <header class="fade-isinView">
             <a class="logo" href="../../"></a>
             <div class="summary">
                 <h1 class="Montserrat">MHD Moët Hennessy Diageo K.K.</h1>
@@ -45,10 +45,10 @@
                 <a class="btnDetail Montserrat" href="https://www.mhdkk.com/" target="_blank"><span>VIEW WEBSITE</span></a>
             </div>
         </header>
-        <section class="coverImg">
+        <section class="coverImg fade-isinView">
             <img src="coverImg.jpg" alt="">
         </section>
-        <section class="slider">
+        <section class="slider fade-isinView">
             <div class="brandLogo"><img src="../../assets/images/sp_mhd_logo.png" alt=""></div>
             <ul class="slick_slider">
                 <li><span><img src="device-display.png" alt=""></span</li>
@@ -59,22 +59,22 @@
         </section>
 
         <div class="gridContainer">
-            <section class="introduction">
+            <section class="introduction fade-isinView">
                 <h2 class="Montserrat">STORY OF MHD</h2>
                 <p>MHD モエ ヘネシー ディアジオは、ラグジュアリー市場をリードする<br>
                 LVMH モエ ヘネシー・ルイ ヴィトン グループのワインズ&スピリッツ事業を担うモエ ヘネシーと、スピリッツを中心に多数の洋酒ブランドを持つディアジオとの合弁会社です。<br>
                 歴史と伝統のあるシャンパン・ワイン・スピリッツのラグジュアリーブランドを多数保有し、世界を代表する優れたポートフォリオを駆使して、高級洋酒マーケットをリードし続けている洋酒輸入販売会社です。<br>
                 </p>
             </section>
-            <section class="mobile">
+            <section class="mobile fade-isinView">
                 <img src="iphone.png" alt="">
             </section>
     
-            <section class="screen">
+            <section class="screen fade-isinView">
                 <img src="screen02.png" alt="">
             </section>
         </div>
-        <div id="backTonavi" class="Montserrat"> 
+        <div id="backTonavi" class="Montserrat fade-isinView"> 
             <a href="../../"><span>BACK TO LIST</span></a>            
         </div>
     </div>    
