--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 					</picture>
 				</a> -->
 			</div>
-			<h3 class="Montserrat upfade-init category-ttl">LP DESIGN</h3>
+<!-- 			<h3 class="Montserrat upfade-init category-ttl">LP DESIGN</h3>
 			<div class="inner boxfade-init">
 				<a href="/portfolio/works/archives14/" class="item">
 					<picture>
@@ -231,7 +231,7 @@
 					  <img src="/portfolio/img/pc_kaigo_logo.png">
 					</picture>
 				</a>
-			</div>
+			</div> -->
 			<h3 class="Montserrat upfade-init category-ttl">BANNER</h3>
 			<div class="inner boxfade-init">
 				<a href="/portfolio/works/archives17/" class="item">
@@ -287,13 +287,13 @@
 					  <img src="/portfolio/img/pc_clineque_logo.svg">
 					</picture>
 				</a>
-				<a href="/portfolio/works/archives23/" class="item">
+<!-- 				<a href="/portfolio/works/archives23/" class="item">
 					<picture>
 					  <source media="(min-width: 768px)" srcset="/portfolio/img/pc_donki_logo.png">
 					  <source media="(min-width: 321px)" srcset="/portfolio/img/sp_donki_logo.png">
 					  <img src="/portfolio/img/pc_donki_logo.png">
 					</picture>
-				</a>
+				</a> -->
 				<!-- <a href="/portfolio/works/archives24/" class="item">
 					deloitte
 					<picture>
@@ -323,11 +323,11 @@
 		</div>
 
 	</div>
-	<div class="about_contents">
+<!-- 	<div class="about_contents">
 		<h2 class="Montserrat upfade-init">ABOUT ME</h2>
 		<p class="en Montserrat upfade-init">I’m into web designing.</p>
 		<p class="readtxt upfade-init">web業界の職務経歴は現在9年目となりまして、主な業務として、デザイン制作HTML/CSS/JS実装、などをしております。webデザイナーとして心がけている事は、デザインの緩急を意識して制作しております。まずどの情報が優先度が高いのかを決め、1.「ユーザーに対しての印象付け」2.「メッセージ・訴求ポイントの見せ方」3.「サイト全体の見やすさ・使いやすさ」を考えながら制作をしております。デザイン業務以外では、FlashやJavascriptでの実装などの案件も携わり、比較的簡単なスクリプトであれば実装しておりました。プログラミングの世界もまたデザインと通じており、情報設計が大切だと思っております。</p>
-	</div>
+	</div> -->
 	<div class="pagetop">
 		<span class="arrow upfade-init"></span>
 	</div>
